package.jsonのapp名変えました

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socket_io_sample",
+  "name": "photosho-sv-sample",
   "version": "0.0.1",
   "description": "sample",
   "main": "web.js",
